[package]
name = "rts"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = {version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
nix = { version = "0.31.3", features = ["signal"] }
reqwest = {version = "0.13", features = ["json", "query"]}
rev_buf_reader = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
